# public_oss_HydraStream

./: .gitignore  README.md  build_and_push_local.sh  codebase_overview.md  docker-compose.yml  pipeline_architecture.html  pipeline_architecture.md  start_local_deps.sh
.github/workflows/: build-and-push.yml  quality-gates.yml
collector/: Dockerfile  main.py
data_simulator/: docker-compose.yml  example.env
data_simulator/collector/: Dockerfile  main.py  requirements.txt
data_simulator/simulator/: Dockerfile  simulate.py
data_simulator/website/: Dockerfile  index.html  (+3 more)
dbt/: .user.yml  dbt_project.yml  profiles.yml
flink/: Dockerfile
infra/: init_clickhouse.sql  init_postgres.sql
infra/flink-proxy-gateway/: Dockerfile  IMPLEMENTATION.md  Makefile  README.md  pyproject.toml
infra/flink-proxy-gateway/deploy/kubernetes/: configmap.yaml
infra/flink-proxy-gateway/src/flink_gateway_proxy/: __init__.py  config.py
infra/flink-proxy-gateway/src/flink_gateway_proxy/gateway/: client.py
infra/flink-proxy-gateway/src/flink_gateway_proxy/models/: confluent.py  flink.py
infra/flink-proxy-gateway/src/flink_gateway_proxy/session/: manager.py
infra/flink-proxy-gateway/src/flink_gateway_proxy/state/: store.py
infra/flink-proxy-gateway/src/flink_gateway_proxy/translator/: statement.py  status.py  traits.py
sample_dbt_model/: example_sink.sql  example_source.sql  schema.yml
scripts/: run-build-push.sh  run-quality-gates.sh
simulator/: simulate.py
streaming_infra/: docker-compose.yml  example.env
website/: Dockerfile  index.html  main.js  tracker.js
(+38 files in other folders)
